--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "BarterApp",
-    "slug": "BarterApp",
+    "name": "BarterApp-1",
+    "slug": "BarterAp-1",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
