--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat-alternates": "^0.1.0",
     "expo": "~40.0.0",
     "expo-font": "^8.4.0",
     "expo-status-bar": "^1.0.3",
@@ -15,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "^0.63.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.13.18"
   },
   "devDependencies": {
